--- a/genuino101_orientation_uart/platformio.ini
+++ b/genuino101_orientation_uart/platformio.ini
@@ -12,3 +12,8 @@
 platform = intel_arc32
 board = genuino101
 framework = arduino
+monitor_port=/dev/ttyACM0
+upload_port=/dev/ttyACM0
+
+lib_deps =
+    https://github.com/arduino-libraries/MadgwickAHRS
